--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "personal-website",
-  "version": "0.2.5",
+  "version": "3.1.0",
   "description": "Personal website under construction",
   "engines": {
-    "node": "5.9.1"
+  "node": "5.9.1"
   },
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
-    "ejs": "2.4.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "socket.io": "1.0.2" 
   },
   "repository": {
     "type": "git",
