--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-website",
   "version": "3.1.0",
-  "description": "Personal website under construction",
+  "description": "Samuel Camarena Caballer personal website",
   "engines": {
   "node": "5.9.1"
   },
